[gd_scene load_steps=8 format=2]

[ext_resource path="res://Login.gd" type="Script" id=2]
[ext_resource path="res://assets/norwester.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.952941, 0.952941, 0.952941, 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[node name="Login" type="Node2D" groups=[
"login",
]]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.152941, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 110.0
margin_bottom = 177.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelUsername" type="Label" parent="CanvasLayer/ColorRect/Container"]
margin_right = 210.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "USERNAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputUsername" type="LineEdit" parent="CanvasLayer/ColorRect/Container"]
margin_top = 62.0
margin_right = 210.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 12

[node name="LabelPassword" type="Label" parent="CanvasLayer/ColorRect/Container"]
margin_top = 116.0
margin_right = 210.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "PASSWORD"

[node name="InputPassword" type="LineEdit" parent="CanvasLayer/ColorRect/Container"]
margin_top = 178.0
margin_right = 210.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 12
secret = true
secret_character = "#"

[node name="Button" type="Button" parent="CanvasLayer/ColorRect/Container"]
margin_top = 232.0
margin_right = 210.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 4 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorMessage" type="Label" parent="CanvasLayer/ColorRect"]
modulate = Color( 0.611765, 0.113725, 0.113725, 1 )
anchor_left = 0.503
anchor_top = 0.731
anchor_right = 0.503
anchor_bottom = 0.731
margin_left = -200.152
margin_top = -17.9204
margin_right = 199.848
margin_bottom = 18.0796
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/ColorRect/Container/Button" to="." method="_on_Button_pressed"]
